# parallel-image-processing

./: CMakeLists.txt  Makefile  README.md
include/: image_processing.h
src/: image_processing.cpp  main.cpp
